[package]
name = "mb2-touch"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7"
microbit-v2 = "0.15.1"
rtt-target = "0.6"
panic-rtt-target = "0.2"
embedded-hal = "1.0.0"

# This works around old versions in the `microbit-v2`
# crate. You don't have to use this crate, just linking
# against it is sufficient.
[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]
